@@ -77,6 +77,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11982: fix json.loads('""') to return u'' rather than ''.
+
 - Issue #11277: mmap.mmap() calls fcntl(fd, F_FULLFSYNC) on Mac OS X to get
   around a mmap bug with sparse files. Patch written by Steffen Daode Nurpmeso.
 
